[gd_scene load_steps=8 format=2]

[ext_resource path="res://gameover.gd" type="Script" id=1]
[ext_resource path="res://assets/font/TESTN___.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://assets/animations/wiggle.tres" type="Animation" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 901.977, 702.806 ), Vector2( 903.255, 678.517 ) ]
}

[sub_resource type="GDScript" id=3]
script/source = "extends Control

signal focus

func _ready():
	for option in get_children():
		if option is Button:
			option.connect(\"focus_entered\", self, \"_on_focus\", [option])

func _on_focus(node: Control):
	emit_signal(\"focus\", node)"

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Tex:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Winner" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.552941, 0.870588, 0.568627, 0.254902 )
script = ExtResource( 1 )

[node name="Tex" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -174.5
margin_bottom = -117.5
custom_fonts/font = SubResource( 1 )
text = "YOU WON!"
align = 1
valign = 1
uppercase = true

[node name="Cursor" type="Position2D" parent="."]
visible = false
position = Vector2( 777, 710 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Cursor"]
autoplay = "wiggle"
anims/poasp = SubResource( 2 )
anims/wiggle = ExtResource( 3 )

[node name="cursor" type="Label" parent="Cursor"]
margin_top = -4.44216
margin_right = 30.0
margin_bottom = 34.5578
rect_pivot_offset = Vector2( 15, 15 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = ">"

[node name="Options" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -183.0
margin_top = 160.0
margin_right = 184.0
margin_bottom = 210.0
custom_constants/separation = 100
alignment = 1
script = SubResource( 3 )

[node name="Play" type="Button" parent="Options"]
margin_right = 133.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Retry"

[node name="Quit" type="Button" parent="Options"]
margin_left = 233.0
margin_right = 367.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Quit"

[node name="anim" type="AnimationPlayer" parent="."]
playback_speed = 1.5
anims/show = SubResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Focus" type="AudioStreamPlayer" parent="."]

[node name="Selected" type="AudioStreamPlayer" parent="."]

[node name="Tween" type="Tween" parent="."]

[connection signal="focus" from="Options" to="." method="_on_Options_focus"]
[connection signal="pressed" from="Options/Play" to="." method="_on_btn_play_pressed"]
[connection signal="pressed" from="Options/Quit" to="." method="_on_Quit_pressed"]
